@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class UpgradeStationUI

class UpgradeStationController {
  + UpgradeStationController()
  + getAvailableScenarioNames()
  + getAvailableStationNames()
  + getAvailableBuildingNames()
  + createBuilding(dto)
}

class Player {
    - username: String
    - password: String
    - budget: int
  + deductBudget(buildingType)
}

class Scenario{
    - map: Map
    - year: int
    - locomotiveTypes: List<LocomotiveType>
    - importation: List<ResourceType>
    - exportation: List<ResourceType>
    - changer: int
}

class Station {
    -name: String
    -center: StationCenter
    -position: Position
    -stationType: StationType
    -demandedCargo: List<Cargo>
    -suppliedCargo: List<Cargo>
    -buildings: List <Building>
    +addBuilding(building)
}

class Building {
  - buildingType: BuildingType
  + checkBuildingType(buildingType)
}

enum BuildingType {
  TELEGRAPH
  TELEPHONE
  SMALL_CAFE
  LARGE_CAFE
  SMALL_RESTAURANT
  LARGE_RESTAURANT
  CUSTOMS
  POST_OFFICE
  SMALL_HOTEL
  LARGE_HOTEL
  SILO
  LIQUID_STORAGE
  --
  -cost
  -availabilityYear
  -upgradeGroup
}

class ScenarioDTO {
  - map: Map
  - year
  - locomotiveTypes
  - importation
  - exportation
  - changer
}

class StationDTO {
      -name: String
      -center: StationCenter
      -position: Position
      -stationType: StationType
      -demandedCargo: List<Cargo>
      -suppliedCargo: List<Cargo>
}

class BuildingTypeDTO {
  - cost
  - availabilityYear
  - upgradeGroup
}

class BuildingDTO {
    -buildingType: BuildingType
}

class Repositories {
  - Repositories()
  + getInstance()
  + getScenarioRepository()
  + getStationRepository()
  + getBuildingTypeRepository()
  + getBuildingRepository()
}

class ScenarioRepository {
  + getScenarios()
}

class StationRepository {
  + getStations()
 }

class BuildingTypeRepository {
  + getBuildingType()
}

class BuildingRepository {
  + createBuilding(dto)
  + addBuilding(building)
}

class ScenarioListMapper {
  + toDTO(List<Scenario>)
}

class StationListMapper {
  + toDTO(List<Station>)
}

class BuildingTypeListMapper {
  + toDTO(List<BuildingType>)
}

class BuildingMapper {
  + toBuilding(dto)
}

UpgradeStationUI ..> UpgradeStationController

UpgradeStationController ..> Repositories
UpgradeStationController ..> ScenarioListMapper
UpgradeStationController ..> StationListMapper
UpgradeStationController ..> BuildingTypeListMapper
UpgradeStationController ..> BuildingMapper
UpgradeStationController ..> Player
UpgradeStationController ..> StationRepository
UpgradeStationController ..> ScenarioRepository
UpgradeStationController ..> BuildingTypeRepository
UpgradeStationController ..> BuildingRepository

Repositories -> "1" Repositories : instance
Repositories --> "1" ScenarioRepository: scenarioRepository
Repositories --> "1" StationRepository: stationRepository
Repositories --> "1" BuildingTypeRepository: buildingTypeRepository
Repositories --> "1" BuildingRepository: buildingRepository

StationRepository --> "1..*" Station: station
ScenarioRepository --> "1..*" Scenario: scenario
BuildingTypeRepository --> "12" BuildingType: buildingType
BuildingRepository --> "*" Building: building


ScenarioListMapper --> "1" ScenarioDTO: scenarioDTO
ScenarioListMapper --> "1..*" Scenario: scenario
StationListMapper --> "1" StationDTO: stationDTO
StationListMapper --> "1..*" Station: station
BuildingTypeListMapper --> "1" BuildingTypeDTO: buildingTypeDTO
BuildingTypeListMapper --> "1..*" BuildingType: buildingType
BuildingMapper --> "1..*" Building: building
BuildingMapper --> "1" BuildingDTO: buildingDTO

@enduml
